# fastap-memory

./: .gitignore  README.md  background_tasks_log.txt  pyproject.toml
fastapi_memoryleak/: .gitignore  cv.py  cv22.py  main2.py  main3.py  mainx.py  memory_logs.md  wrapper1.py  xl_read.py
fastapi_memoryleak/net/: mongodbcon.py
