[tool.poetry]
name = "fastapi-memoryleak"
version = "0.1.0"
description = ""
authors = ["nithya <nithyaniranjana.murthyc@publicisresources.com>"]
readme = "README.md"
packages = [{include = "fastapi_memoryleak"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.1"
uvicorn = "^0.22.0"
memory-profiler = "^0.61.0"
matplotlib = "^3.8.3"
opencv-python = "^4.9.0.80"
python-multipart = "^0.0.9"
pandas = "^2.2.1"
numpy = "^2.0.0"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
